--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.5.0",
+    "bootstrap": "^5.1.1",
     "dotenv": "^10.0.0",
     "fs-extra": "^0.30.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^8.2.1",
-    "next": "^11.1.2",
-    "next-routes": "^1.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "solc": "^0.5.16",
