--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
-    "react-flash-message": "^1.0.5",
+    "react-flippy": "^1.1.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
