--- a/package.json
+++ b/package.json
@@ -5,17 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --timeout 10000",
-    "dev": "next dev"
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "start": "node server.js",
+    "client": "cd client && npm start",
+    "dev": "concurrently -n 'server,client' -c 'red,green' \"nodemon server.js\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.5.0",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.1",
+    "cloudinary": "^1.27.1",
+    "concurrently": "^6.4.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "fs": "^0.0.1-security",
     "fs-extra": "^0.30.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^8.2.1",
+    "mongoose": "^6.1.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "solc": "^0.5.16",
     "web3": "^1.0.0-beta.26"
   }
